tests/NormalTests/paczka1/fuzzy1/86710409.err
Error in line 12: 3cpRUl A234 17,53
Error in line 13: 3kMCEBLzn40 A484 23,9
Error in line 18: fbrTi A2 58,V
Error in line 8: 3cpRUl A484 231,7
Error in line 14: fbrTi A2 9,2
Error in line 24: 3kMCEBLzn40 A2 -3,1
Error in line 30: A484 A484 61,5
Error in line 34: fbrTi A770 81,0
